deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safedevops
  labels:
    app.kubernetes.io/name: safedevops
spec:
  selector:
    app.kubernetes.io/name: safedevops
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
