deploy/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: safedevops
  labels:
    app.kubernetes.io/name: safedevops
spec:
  to:
    kind: Service
    name: safedevops
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
